Minor roadmap style updates This commit updates the roadmap style: - Updates the 'SmoothScroll' function to prevent weird jumping around and to ensure only internal page links are affect. - Removes extra padding on the left hand side of cards to line them up properly. - Adds a slightly different background image for the accordion to increase the 'hitbox' of accordion links. - Removes the 'masonry-wrapper' class and `<div>`.

--- a/css/dta-gov-au.styles.css
+++ b/css/dta-gov-au.styles.css
@@ -3418,6 +3418,9 @@ img.align-right, p.align-right {
     font-size: 40px;
     font-size: 2.5rem;
     line-height: 1.5; }
+  .business-roadmap .view-grouping > div.row div.row > div, .business-roadmap .view-grouping > div.au-card-list div.row > div, .business-roadmap .view-grouping > div.row div.au-card-list > div, .business-roadmap .view-grouping > div.au-card-list div.au-card-list > div {
+    margin-left: -12px;
+    margin-left: -0.75rem; }
   .business-roadmap .view-grouping .skip-link-wrapper {
     display: block;
     position: absolute;
@@ -3524,8 +3527,8 @@ img.align-right, p.align-right {
     border-radius: 4px;
     border-radius: 0.25rem; }
     .business-roadmap .view-grouping .au-card--roadmap .au-card--roadmap__text {
-      padding: 16px 16px 24px 16px;
-      padding: 1rem 1rem 1.5rem 1rem;
+      padding: 16px 16px 40px 16px;
+      padding: 1rem 1rem 2.5rem 1rem;
       border-left: 8px solid;
       border-bottom: 1px solid #7F7F7F;
       border-bottom-left-radius: 4px;
@@ -3545,13 +3548,20 @@ img.align-right, p.align-right {
       @media (min-width: 768px) {
         .business-roadmap .view-grouping .au-card--roadmap .au-accordion {
           border: none; } }
+      .business-roadmap .view-grouping .au-card--roadmap .au-accordion .au-accordion__title:hover:after {
+        background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='-36 -48 208 208'%3E%3Cpath fill='%23313131' d='M64 0l64 64-16 16-64-64'/%3E%3Cpath fill='%23313131' d='M64 0l16 16-64 64L0 64'/%3E%3C/svg%3E"); }
       .business-roadmap .view-grouping .au-card--roadmap .au-accordion .au-accordion__title:after {
         position: absolute;
         top: auto;
-        margin-top: -24px;
-        margin-top: -1.5rem;
-        right: 32px;
-        right: 2rem; }
+        margin-top: -40px;
+        margin-top: -2.5rem;
+        right: 24px;
+        right: 1.5rem;
+        width: 32px;
+        width: 2rem;
+        height: 32px;
+        height: 2rem;
+        background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='-36 -48 208 208'%3E%3Cpath fill='%23007099' d='M64 0l64 64-16 16-64-64'/%3E%3Cpath fill='%23007099' d='M64 0l16 16-64 64L0 64'/%3E%3C/svg%3E"); }
       .business-roadmap .view-grouping .au-card--roadmap .au-accordion .au-accordion__body-wrapper {
         columns: 1; }
       .business-roadmap .view-grouping .au-card--roadmap .au-accordion .au-accordion__body {
